# plus1_Bnoos

./: .gitignore  Makefile  Makefile2  README  m2  main.c  pack.conf  start.S
Marlin/: Configuration.h  ConfigurationStore.cpp  Marlin.h  MarlinSerial.cpp  MarlinSerial.h  Marlin_main.cpp  language.h  motion_control.cpp  pins.h  planner.cpp  stepper.cpp  temperature.cpp  temperature.h  temperature_ads1015.cpp  temperature_ads1015.h  thermistortables.h  ultralcd.cpp  ultralcd_implementation_hitachi_HD44780.h
Marlin/arduino/: main.cpp  wiring.c  wiring_analog.c
Marlin/include/: stdio.h
Marlin/include/avr/: interrupt.h  pgmspace.h
Marlin/include/util/: delay.h
Marlin2/: Configuration.h  Makefile_gcc  complie.sh
Marlin2/avr/: pgmspace.h
Marlin2/framework-arduino/: package.json
Marlin2/framework-arduino/bootloaders/stk500v2/: avrinterruptnames.h  stk500boot.c
Marlin2/framework-arduino/cores/arduino/: Arduino.h  WInterrupts.c  main.cpp  wiring.c  wiring.h  wiring_digital.c
Marlin2/src/HAL/: platforms.h
Marlin2/src/HAL/AVR/: HAL.h  MarlinSerial.cpp  MarlinSerial.h  timers.h
Marlin2/src/HAL/SP7021/: HAL.cpp  HAL.h  HAL_SPI.cpp  MarlinSPI.cpp  MarlinSPI.h  MarlinSerial.cpp  MarlinSerial.h  eeprom_sram.cpp  fastio.h  pinsDebug.h  spi_pins.h  temperature_ads1015.cpp  temperature_ads1015.h  timers.cpp  (+2 more)
Marlin2/src/core/: boards.h  serial.cpp
Marlin2/src/module/: stepper.cpp
Marlin2/src/pins/: pins.h
bootfile/: u-boot.img  xboot.img  zebu_xboot.img  zebuboot.img
common/: common.c  cpu_util.c  diag.c  eabi_compat.c  gpio_exp.c  sio.c  stc.c  uart_printf.c
cores/arduino/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  HardwareTimer.cpp  HardwareTimer.h  IPAddress.h  Print.cpp  Print.h  Printable.h  RingBuffer.cpp  RingBuffer.h  Server.h  Stream.cpp  Stream.h  Tone.h  USBSerial.h  Udp.h  VirtIOSerial.cpp  VirtIOSerial.h  WCharacter.h  WInterrupts.cpp  WInterrupts.h  WMath.cpp  WMath.h  WSerial.cpp  WSerial.h  WString.h  abi.cpp  board.c  board.h  core_debug.h  hooks.c  itoa.c  itoa.h  main.cpp  new.cpp  pins_arduino.h  utils.h  wiring.h  wiring_analog.h  (+10 more)
cores/arduino/avr/: dtostrf.c  dtostrf.h  pgmspace.h
cores/arduino/sunplus/: clock.h  core_callback.h  digital_io.h  icm.h  interrupt.h  startup_sunplus.S  sunplus_def.h  sunplus_def_build.h  uart.h
drivers/: Makefile
drivers/i2c/: i2c_mas.c
drivers/rs485/: rs485.c
drivers/spinor/: flash.c  sp_spi_nor.c
include/: axi_monitor.h  cache.h  common.h  common_all.h  config.h  emuio.h  gpio_drv.h  mmu.inc  monitor.h  regmap.h  regmap_8388_all.h  regmap_gemini.h  regmap_q628.h  sp_interrupt.h  stc.h  types.h  uart.h
include/asm/: common.h  link.h
include/drivers/: rs485.h  sp_spi_nor.h
include/util/: cbdma.h  ipc.h  timer.h
libraries/DriverWrapper/src/: SrcWrapper.h  syscall.c
libraries/SPI/src/: SPI.cpp  SPI.h
libraries/Wire/src/: Wire.cpp  Wire.h
libraries/examples/: examples.cpp
libraries/examples/VirtIOSerial/: VirtIOSerial_example.cpp
libraries/examples/exti/: exti_example.cpp
libraries/examples/i2c/: i2c_example.cpp
libraries/examples/icm/: icm_example.cpp
libraries/examples/spi/: spi_exmaple.cpp
libraries/examples/timer/: timer_interrupt.cpp
libraries/examples/uart/: uart_exmaple.cpp
mon/: monitor.c
prebuilt/: xboot.img  xboot_nor.img
script/: add_uhdr.sh  gen_hex.sh  rom.ld  rom.ldi  update_all.sh
script/tools/: elf2mem.py  mkimage  update_mkimage.sh
system/Middlewares/OpenAMP/libmetal/examples/system/freertos/zynqmp_r5/zynqmp_amp_demo/: CMakeLists.txt  common.h  sys_init.c
system/Middlewares/OpenAMP/open-amp/apps/examples/load_fw/: CMakeLists.txt  common.h  load_fw.c  platform_info.c  zynqmp_apu_lcm_rproc_example.c  zynqmp_rpu_lcm_rproc_example.c
system/sp7021/: mem_sp7021.h  sp7021_hal_conf.h  sp7021_hal_conf_default.h  system_sp7021.c
testapi/axi_monitor/: axi_monitor.c  hal_axi_monitor_reg.h  hal_axi_monitor_sub_reg.h
testapi/interrupt/: sp_interrupt.c  vectors.S
testapi/noc/: noc_main.c  noc_perf.c  noc_reg.h
testapi/qch/: hal_iop_reg.h  iop.S  iop_car.inc  qch_test.c
testapi/util/: cbdma.c  ipc.c  timer.c
variants/sp7021_evb/: variant.cpp  variant.h
variants/sp7021_evb/script/: add_uhdr.sh  check_dev.sh  ldscript.ldi
(+160 files in other folders)
